fixed some spacing issues and added a new project

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,18 +50,7 @@ body{
   text-align: center;
 }
 
-/*.portfolio-area.top{
-  color:white;
-  opacity: .90;
-  position: fixed;
-  top: 0;
-  left:0;
-  width: 100%;
-  color: white;
-  height: 30px;
-  z-index: 20;
 
-}*/
 
 #Nav{
   color: black;
@@ -69,9 +58,8 @@ body{
   height: 30px;
   width: 100%;
   position: fixed;
-  /*opacity: .90;*/
   background-color: #C6983E;
-
+  z-index: 1;
 }
 span{
   color: #F4B033;
@@ -91,21 +79,8 @@ span1{
 #aboutme {
   text-align:center;
   margin-bottom: 50px;
-  /*padding-top: 0px;
-  background-size: cover;
-  color: bold purple;
-  font-family: 'arial bold';
-  font-size: 20px;
-  left:0;
-  right:0;
-  top:0;
-  bottom:0;
-  margin-top: 0px;
-  height:500px;
-  z-index:-1;
-  text-align:center;
-  padding-bottom: 0px;
-  margin-bottom: 0px;*/
+  z-index: -2;
+
 }
 h4{
   font-size: 70px;
@@ -150,7 +125,7 @@ h4{
 
 #row{
   display: inline-block;
-  max-width: 100%;
+
 }
 
 #projects{
@@ -161,6 +136,7 @@ h4{
   color: #e8f6fd;
   margin-top: 0px;
   padding-top: 0px;
+  z-index: -3;
 }
 
 #projects  h1{
@@ -185,7 +161,7 @@ h4{
 
 #projects img{
   margin-bottom: 20px;
-  border-radius: 30px;
+  border-radius: 10px;
   width: 500px;
   height: 328px;
   border: 5px solid #F4B033;
@@ -198,7 +174,8 @@ h4{
   width: 100%;
   font-size: 15px;
   height: 300px;
-  padding-top: 135px;
+  padding-top:
+  50px;
   color: #F4B033;
   text-align: center;
 }
